k8s/admin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  labels:
    env: dev
    owner: Panasik
spec:
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: market
          image: vladislavpanasik/admin:latest
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
