k8s/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image
  labels:
    env: dev
    owner: Panasik
spec:
  selector:
    matchLabels:
      app: image
  template:
    metadata:
      labels:
        app: image
    spec:
      containers:
        - name: image
          image: vladislavpanasik/image:latest
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: image
spec:
  selector:
    app: image
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
