k8s/market.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: market
  labels:
    env: dev
    owner: Panasik
spec:
  selector:
    matchLabels:
      app: market
  template:
    metadata:
      labels:
        app: market
    spec:
      containers:
        - name: market
          image: vladislavpanasik/market:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: market
spec:
  selector:
    app: market
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
