k8s/mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    env: dev
    owner: Panasik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongodb-pv-claim
            - mountPath: /data/configdb
              name: mongodb-pv-claim
      volumes:
        - name: mongodb-pv-claim
          persistentVolumeClaim:
            claimName: mongodb-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
