k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 3000
      - pathType: Prefix
        path: "/upload"
        backend:
          service:
            name: image
            port:
              number: 8082
      - pathType: Prefix
        path: "/api/v1"
        backend:
          service:
            name: market
            port:
              number: 8081
